syntax = "proto3";

option csharp_namespace = "BankClient";

service BankClientService {
  rpc Deposit (DepositRequest) returns (DepositReply);
  rpc Withdrawal (WithdrawalRequest) returns (WithdrawalReply);
  rpc ReadBalance (ReadBalanceRequest) returns (ReadBalanceReply);
  rpc Register (RegisterRequest) returns (RegisterReply);
}

message DepositRequest {
	double ammount = 1;
}
message DepositReply {
	string  reply = 1;
}

message WithdrawalRequest {
	double ammmount = 1;
}
message WithdrawalReply {
	string reply = 1;
}

message ReadBalanceRequest {}
message ReadBalanceReply {
	string reply = 1;
}

message RegisterRequest{}
message RegisterReply {}